--- a/dataset_split.ipynb
+++ b/dataset_split.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f03ea0dd",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        " 'val_test_overlap': set()}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
     "    print(f\"Validation ∩ Test:  {len(val_test_overlap)} overlapping samples\")\n",
     "\n",
     "    if train_test_overlap:\n",
-    "        print(\"\\n🚨 示例重复文本（Train ∩ Test）:\")\n",
+    "        print(\"\\nSample duplicate text (Train ∩ Test):\")\n",
     "        for i, text in enumerate(list(train_test_overlap)[:5]):\n",
     "            print(f\"- {text[:100]}...\")  # 只显示前 80 字符\n",
     "\n",
