fix some problems

--- a/dataset_split.ipynb
+++ b/dataset_split.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "aa063090",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "67df7a18",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "822a8345",
    "metadata": {},
    "outputs": [
@@ -63,9 +63,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original train set:\n",
+      "Number of total text: 25000\n",
+      "Number of unique text: 24904\n",
+      "Is there any duplicate text? : True and Duplicate numbers: 96\n",
+      "\n",
+      "Original test set:\n",
+      "Number of total text: 25000\n",
+      "Number of unique text: 24801\n",
+      "Is there any duplicate text? : True and Duplicate numbers: 199\n",
+      "\n",
+      "Total dataset:\n",
       "Number of total text: 50000\n",
       "Number of unique text: 49582\n",
-      "Is there any duplicate text? : True\n"
+      "Is there any duplicate text? : True and Duplicate numbers: 418\n"
      ]
     }
    ],
@@ -78,13 +89,35 @@
     "\n",
     "# count all\n",
     "total = len(full_dataset)\n",
+    "total_train = len(ds['train'])\n",
+    "total_test = len(ds['test'])\n",
     "\n",
     "# count unique text\n",
     "unique = len(set(full_dataset['text']))\n",
+    "unique_train = len(set(ds['train']['text']))\n",
+    "unique_test = len(set(ds['test']['text']))\n",
     "\n",
+    "# duplicate count\n",
+    "du_total = total - unique\n",
+    "du_train = total_train - unique_train\n",
+    "du_test = total_test - unique_test\n",
+    "\n",
+    "print(\"Original train set:\")\n",
+    "print(f\"Number of total text: {total_train}\")\n",
+    "print(f\"Number of unique text: {unique_train}\")\n",
+    "print(f\"Is there any duplicate text? : {total_train != unique_train} and Duplicate numbers: {du_train}\")\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"Original test set:\")\n",
+    "print(f\"Number of total text: {total_test}\")\n",
+    "print(f\"Number of unique text: {unique_test}\")\n",
+    "print(f\"Is there any duplicate text? : {total_test != unique_test} and Duplicate numbers: {du_test}\")\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"Total dataset:\")\n",
     "print(f\"Number of total text: {total}\")\n",
     "print(f\"Number of unique text: {unique}\")\n",
-    "print(f\"Is there any duplicate text? : {total != unique}\")"
+    "print(f\"Is there any duplicate text? : {total != unique} and Duplicate numbers: {du_total}\")\n"
    ]
   },
   {
@@ -99,7 +132,8 @@
      "text": [
       "Train size: 34707\n",
       "Validation size: 9916\n",
-      "Test size: 4959\n"
+      "Test size: 4959\n",
+      "Total size: 49582\n"
      ]
     }
    ],
@@ -108,6 +142,7 @@
     "\n",
     "# unique\n",
     "df_unique = df.drop_duplicates(subset=\"text\")\n",
+    "df_unique = df.drop(columns=[\"__index_level_0__\"])\n",
     "\n",
     "# transfer to dataset\n",
     "full_dataset = Dataset.from_pandas(df_unique)\n",
@@ -130,12 +165,13 @@
     "\n",
     "print(\"Train size:\", len(dataset[\"train\"]))\n",
     "print(\"Validation size:\", len(dataset[\"validation\"]))\n",
-    "print(\"Test size:\", len(dataset[\"test\"]))"
+    "print(\"Test size:\", len(dataset[\"test\"]))\n",
+    "print(\"Total size:\", len(dataset[\"train\"]) + len(dataset[\"test\"]) + len(dataset[\"validation\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "de3a0610",
    "metadata": {},
    "outputs": [
@@ -143,17 +179,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                text  label  __index_level_0__\n",
-      "0  Anarchy and lawlessness reign supreme in the p...      1              18135\n",
-      "1  Before I begin, a \"little\" correction: IMDb st...      0              28917\n",
-      "2  You know Jason, you know Freddy, and you know ...      0              10723\n",
-      "3  Creative use of modern and mystical elements: ...      1              15970\n",
-      "4  In the trivia section for Pet Sematary, it men...      1              23713\n",
-      "5  Despite a totally misleading advertising campa...      0              33491\n",
-      "6  Well, were to start? This is by far one of the...      0              12150\n",
-      "7  What's written on the poster is: \"At birth he ...      0               8495\n",
-      "8  Many of the earlier comments are right on the ...      1              40256\n",
-      "9  i love this show. i hate when it goes to seaso...      1              38548\n"
+      "                                                text  label\n",
+      "0  Anarchy and lawlessness reign supreme in the p...      1\n",
+      "1  Before I begin, a \"little\" correction: IMDb st...      0\n",
+      "2  You know Jason, you know Freddy, and you know ...      0\n",
+      "3  Creative use of modern and mystical elements: ...      1\n",
+      "4  In the trivia section for Pet Sematary, it men...      1\n",
+      "5  Despite a totally misleading advertising campa...      0\n",
+      "6  Well, were to start? This is by far one of the...      0\n",
+      "7  What's written on the poster is: \"At birth he ...      0\n",
+      "8  Many of the earlier comments are right on the ...      1\n",
+      "9  i love this show. i hate when it goes to seaso...      1\n"
      ]
     }
    ],
@@ -166,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "42c88d10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35238a36f85c4bc6aacf12d7b1cf654d",
+       "model_id": "8f9c871e393b427e99b2de1700366825",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebba816c61314514bb58930e4ce582eb",
+       "model_id": "aeb562d73bbd4fe7bcfcf71893b1d2be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbc4c8031a514ba4a19b63b6a5e40a3f",
+       "model_id": "108de4f2d8f54cb79b970a5fb81789ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,10 +251,10 @@
     {
      "data": {
       "text/plain": [
-       "6669770"
+       "6641057"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "f03ea0dd",
    "metadata": {},
    "outputs": [
@@ -252,7 +288,7 @@
        " 'val_test_overlap': set()}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
