--- a/dataset_split.ipynb
+++ b/dataset_split.ipynb
@@ -54,8 +54,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a86d4aa0",
+   "metadata": {},
+   "source": [
+    "## Count duplicate text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "822a8345",
    "metadata": {},
    "outputs": [
@@ -121,8 +129,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "463eea73",
+   "metadata": {},
+   "source": [
+    "## Drop duplicates text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "ea5d238d",
    "metadata": {},
    "outputs": [
@@ -142,7 +158,9 @@
     "\n",
     "# unique\n",
     "df_unique = df.drop_duplicates(subset=\"text\")\n",
-    "df_unique = df.drop(columns=[\"__index_level_0__\"])\n",
+    "\n",
+    "if \"__index_level_0__\" in df_unique.columns:\n",
+    "    df_unique = df_unique.drop(columns=[\"__index_level_0__\"])\n",
     "\n",
     "# transfer to dataset\n",
     "full_dataset = Dataset.from_pandas(df_unique)\n",
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "de3a0610",
    "metadata": {},
    "outputs": [
@@ -202,63 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "42c88d10",
+   "execution_count": null,
+   "id": "bdbb1013",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f9c871e393b427e99b2de1700366825",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/35 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aeb562d73bbd4fe7bcfcf71893b1d2be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/10 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108de4f2d8f54cb79b970a5fb81789ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/5 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6641057"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset['train'].to_csv(\"imdb_train.csv\")\n",
     "dataset['validation'].to_csv(\"imdb_validation.csv\")\n",
@@ -266,8 +231,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10419da1",
+   "metadata": {},
+   "source": [
+    "## Check file overlap again"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "f03ea0dd",
    "metadata": {},
    "outputs": [
@@ -288,7 +261,7 @@
        " 'val_test_overlap': set()}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,6 +305,150 @@
     "    val_path=\"imdb_validation.csv\",\n",
     "    test_path=\"imdb_test.csv\"\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b57ba2",
+   "metadata": {},
+   "source": [
+    "## Check label is not same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0220f6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_train = pd.read_csv(\"imdb_train.csv\")\n",
+    "df_val = pd.read_csv(\"imdb_validation.csv\")\n",
+    "df_test = pd.read_csv(\"imdb_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0bbfb1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full size:  50000\n",
+      "train size:  34707\n",
+      "merge number:  35010\n",
+      "Number of samples label not same: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_dataset = concatenate_datasets([ds['train'], ds['test']])  # 50,000\n",
+    "df_full = full_dataset.to_pandas()\n",
+    "\n",
+    "# check train label is not same with original\n",
+    "print(\"full size: \", len(df_full))\n",
+    "print(\"train size: \", len(df_train))\n",
+    "\n",
+    "merged = df_train.merge(df_full, on=\"text\", suffixes=(\"_train\", \"_full\"))\n",
+    "print(\"merge number: \", len(merged))\n",
+    "\n",
+    "mismatch = merged[merged[\"label_train\"] != merged[\"label_full\"]]\n",
+    "\n",
+    "print(f\"Number of samples label not same: {len(mismatch)}\")\n",
+    "if not mismatch.empty:\n",
+    "    print(mismatch[[\"text\", \"label_train\", \"label_full\"]].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9fc4dc9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full size:  50000\n",
+      "val size:  9916\n",
+      "merge number:  9993\n",
+      "Number of samples label not same: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check train label is not same with original\n",
+    "\n",
+    "print(\"full size: \",len(df_full))\n",
+    "print(\"val size: \", len(df_val))\n",
+    "\n",
+    "merged = df_val.merge(df_full, on=\"text\", suffixes=(\"_val\", \"_full\"))\n",
+    "print(\"merge number: \", len(merged))\n",
+    "\n",
+    "mismatch = merged[merged[\"label_val\"] != merged[\"label_full\"]]\n",
+    "\n",
+    "print(f\"Number of samples label not same: {len(mismatch)}\")\n",
+    "if not mismatch.empty:\n",
+    "    print(mismatch[[\"text\", \"label_val\", \"label_full\"]].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "f29d128f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full size:  50000\n",
+      "test size:  4959\n",
+      "merge number:  4997\n",
+      "Number of samples label not same: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check test label is not same with original\n",
+    "print(\"full size: \", len(df_full))\n",
+    "print(\"test size: \", len(df_test))\n",
+    "\n",
+    "merged = df_test.merge(df_full, on=\"text\", suffixes=(\"_test\", \"_full\"))\n",
+    "\n",
+    "print(\"merge number: \", len(merged))\n",
+    "\n",
+    "mismatch = merged[merged[\"label_test\"] != merged[\"label_full\"]]\n",
+    "\n",
+    "print(f\"Number of samples label not same: {len(mismatch)}\")\n",
+    "if not mismatch.empty:\n",
+    "    print(mismatch[[\"text\", \"label_test\", \"label_full\"]].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "dc72ccee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train label 0: 17358\n",
+      "Train label 1: 17349\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_counts = df_train[\"label\"].value_counts()\n",
+    "print(f\"Train label 0: {label_counts[0]}\")\n",
+    "print(f\"Train label 1: {label_counts[1]}\")"
    ]
   }
  ],
